@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/grp/Attic/grp-chroot.sh,v 1.10 2004/10/15 02:46:58 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/grp/Attic/grp-chroot.sh,v 1.11 2005/01/11 14:10:19 wolf31o2 Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -37,13 +37,18 @@ then
 	unset DISTDIR
 	export PKGDIR="/tmp/grp/${clst_grp_target}"
 
+	if [ -n "${clst_FETCH}" ]
+	then
+		export clst_myemergeopts="${clst_myemergeopts} -f"
+	fi
+
 	if [ -n "${clst_VERBOSE}" ]
 	then
-		emerge --usepkg --buildpkg --noreplace --newuse -vp ${clst_grp_packages} || exit 1
+		emerge --usepkg --buildpkg --noreplace --newuse -vp ${clst_myemergeopts} ${clst_grp_packages} || exit 1
 		sleep 15
 	fi
 	
-	emerge --usepkg --buildpkg --noreplace --newuse ${clst_grp_packages} || exit 1
+	emerge --usepkg --buildpkg --noreplace --newuse ${clst_myemergeopts} ${clst_grp_packages} || exit 1
 else
 	unset DISTDIR
 	#don't grab MS core fonts, etc.
