@@ -1,7 +1,7 @@
 #!/bin/sh
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/Attic/stage2-chroot.sh,v 1.9 2004/11/23 00:02:57 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage2/Attic/stage2-chroot.sh,v 1.10 2005/01/11 14:10:19 wolf31o2 Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -25,6 +25,11 @@ fi
 if [ -n "${clst_PKGCACHE}" ]
 then
 	export bootstrap_opts="-r"
+fi
+
+if [ -n "${clst_FETCH}" ]
+then
+	export bootstrap_opts="-f"
 fi
 
 GRP_STAGE23_USE="$(portageq envvar GRP_STAGE23_USE)"
