@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.14 2005/01/11 13:12:36 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.15 2005/01/11 14:10:19 wolf31o2 Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -27,6 +27,11 @@ then
 	export clst_myemergeopts="${clst_myemergeopts} --usepkg --buildpkg --newuse"
 fi
 
+if [ -n "${clst_FETCH}" ]
+then
+	export clst_myemergeopts="${clst_myemergeopts} -f"
+fi
+
 GRP_STAGE23_USE="$(portageq envvar GRP_STAGE23_USE)"
 
 # setup the build environment
@@ -41,7 +46,7 @@ USE="build" emerge portage
 
 if [ -n "${clst_VERBOSE}" ]
 then
-	emerge ${clst_myemergeopts} -vp system || exit 1
+	emerge -e ${clst_myemergeopts} -vp system || exit 1
 	sleep 15
 fi
 
